[package]
name = "clixon-rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
glob = "0.3.2"
libloading = "0.8.6"
regex = "1.11.1"
wildmatch = "2.4.0"
xmltree = "0.11.0"

[[bin]]
name = "clixon-rustapi"
path = "src/main.rs"
